# sigmanix-tech-chatbot

./: .env.example  .replit  DEPLOYMENT_COMPLETE.md  DEPLOY_NOW.md  QUICK_DEPLOY.md  README.md  RENDER_DEPLOYMENT.md  admin_routes.py  data.txt  pyproject.toml  requirements.txt
