[tool.poetry]
name = "sigmanix-tech-chatbot"
version = "1.0.0"
description = "AI-powered educational chatbot for Sigmanix Tech"
authors = ["Sigmanix Tech Team"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
groq = "^0.5.0"
langchain = "^0.2.0"
faiss-cpu = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
